# JDKLevelMapsPlugin

./: CMakeLists.txt  JDKLevelMapsPlugin.cpp  JDKLevelMapsPlugin.h  README.md  StdAfx.h
Core/Baking/: BakeManager.cpp  BakeManager.h  BakePipeline.cpp  BakePipeline.h  BakeRunResult.h  DebugPngExporter.cpp  DebugPngExporter.h  IMapBaker.h  LevelBakeContext.h
Core/Baking/Vegetation/: EditorVegetationSource.cpp  EditorVegetationSource.h  VegetationBaker.cpp  VegetationBaker.h  VegetationCategory.h
Core/FileSystem/: PathResolver.cpp  PathResolver.h
Editor/: JDKLevelMapsEditor.cpp  JDKLevelMapsEditor.h
Editor/Components/: MapPreview.cpp  MapPreview.h
Settings/: BakerSettings.h  VegetationBakerSettings.h
Shared/: LayerMapHeader.h  MapHeader.h  MapLayers.h
Utils/: ConvertUtils.h
